@@ -145,6 +145,9 @@ S3method("as.character", "viewport")
 S3method("as.character", "vpList")
 S3method("as.character", "vpStack")
 S3method("as.character", "vpTree")
+S3method("format", "unit")
+S3method("format", "unit.arithmetic")
+S3method("format", "unit.list")
 S3method("print", "grob")
 S3method("print", "gList")
 S3method("print", "unit")
